--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/index.js",
-    "swagger": "nodemon src/swagger.js"
+    "swagger": "nodemon src/swagger.js",
+    "migrate": "npx sequelize db:create"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.7.6",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "sequelize-cli": "^6.4.1"
   }
 }
